creating component to edit categories

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "van-ons/laraberg": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.14",
         "laravel/pint": "^1.0",
